--- a/.github/workflows/submodule-sync.yml
+++ b/.github/workflows/submodule-sync.yml
@@ -58,19 +58,15 @@ jobs:
         mkdir -p ../changelogs
         CHANGELOG_FILE="../changelogs/$(date +%Y%m%d)-update.md"
         
-        cat > $CHANGELOG_FILE << 'EOF'
-# Tailscale Update
-EOF
-        cat >> $CHANGELOG_FILE << EOF
-
-**Date**: $(date +%Y-%m-%d)
-**Tailscale Version**: $TAILSCALE_VERSION
-**Previous Commit**: $OLD_COMMIT
-**New Commit**: $NEW_COMMIT
-
-## Changes
-$CHANGELOG
-EOF
+        echo "# Tailscale Update" > $CHANGELOG_FILE
+        echo "" >> $CHANGELOG_FILE
+        echo "**Date**: $(date +%Y-%m-%d)" >> $CHANGELOG_FILE
+        echo "**Tailscale Version**: $TAILSCALE_VERSION" >> $CHANGELOG_FILE
+        echo "**Previous Commit**: $OLD_COMMIT" >> $CHANGELOG_FILE
+        echo "**New Commit**: $NEW_COMMIT" >> $CHANGELOG_FILE
+        echo "" >> $CHANGELOG_FILE
+        echo "## Changes" >> $CHANGELOG_FILE
+        echo "$CHANGELOG" >> $CHANGELOG_FILE
         
         cat $CHANGELOG_FILE
 
